refactor: docs section

--- a/content/blog/runpod-vs-aquanode-pricing-2025.mdx
+++ b/content/blog/runpod-vs-aquanode-pricing-2025.mdx
@@ -2,11 +2,11 @@
 id: "runpod-vs-aquanode-pricing-2025"
 title: "Aquanode vs RunPod pricing"
 excerpt: "Who has the lowest GPU price? Let's compare which provider give you best value for money."
+coverImage: "/aquanode-vs-runpod.png"
 author:
-  name: "AQUANODE TEAM"
-  handle: "@aquanode"
-  title: "Team Aquanode"
-  avatar: "/api/placeholder/40/40"
+  name: "Team Aquanode"
+  title: "Sarthak Vaish"
+  avatar: "/aquanode-logo.png"
 date: "SEPTEMBER 14, 2025"
 category: "News"
 tags: ["pricing", "comparison", "runpod", "aquanode", "gpu", "akash", "voltage-park", "datacrunch"]
@@ -49,7 +49,7 @@ Both platforms use floating prices. Aquanode pulls GPU capacity from Akash, Data
 
 ## Why Your Bill Isn't Just "Price × Hours"
 
-**💡 Key Considerations:**
+**Key Considerations:**
 
 - **Throughput matters:** a busy 4090 at $0.50/hr can outpace an idle A100 at $0.90/hr.
 - **Restarts add up:** cold boots and image pulls sneak into the bill.
@@ -68,17 +68,17 @@ Both platforms use floating prices. Aquanode pulls GPU capacity from Akash, Data
 ## When Each One Makes Sense
 
 ### RunPod
-✅ Perfect for short jobs where you can hunt for a deal.
-✅ Good if you need a specific SKU or region right now and don't mind marketplace churn.
+- Perfect for short jobs where you can hunt for a deal.
+- Good if you need a specific SKU or region right now and don't mind marketplace churn.
 
 ### Aquanode
-✅ Better when you want predictable, competitive pricing.
-✅ Great if you care about total throughput and reliability more than price-sniping.
-✅ One API for multiple providers—no manual stitching.
+- Better when you want predictable, competitive pricing.
+- Great if you care about total throughput and reliability more than price-sniping.
+- One API for multiple providers—no manual stitching.
 
 ## Quick DIY Test
 
-**🧪 Performance Comparison Steps:**
+**Performance Comparison Steps:**
 
 1. Pick two SKUs on each platform.
 2. Run the same workload for 24 hours.
