style slug blogs page

--- a/content/blog/runpod-vs-aquanode-pricing-2025.mdx
+++ b/content/blog/runpod-vs-aquanode-pricing-2025.mdx
@@ -6,7 +6,7 @@ coverImage: "/aquanode-vs-runpod.png"
 author:
   name: "Team Aquanode"
   title: "Sarthak Vaish"
-  avatar: "/aquanode-logo.png"
+  avatar: "/aquanode-team-logo.png"
 date: "SEPTEMBER 14, 2025"
 tags: ["pricing", "comparison", "runpod", "aquanode", "gpu", "akash", "voltage-park", "datacrunch"]
 readTime: "6 min read"
