refactor: purging unused components and assets

--- a/content/blog/runpod-vs-aquanode-pricing-2025.mdx
+++ b/content/blog/runpod-vs-aquanode-pricing-2025.mdx
@@ -2,11 +2,11 @@
 id: "runpod-vs-aquanode-pricing-2025"
 title: "Aquanode vs RunPod pricing"
 excerpt: "Who has the lowest GPU price? Let's compare which provider give you best value for money."
-coverImage: "/aquanode-vs-runpod.png"
+coverImage: "/blogs/aquanode-vs-runpod.png"
 author:
   name: "Team Aquanode"
   title: "Sarthak Vaish"
-  avatar: "/aquanode-team-logo.png"
+  avatar: "/blogs/aquanode-team-logo.png"
 date: "SEPTEMBER 14, 2025"
 tags: ["pricing", "comparison", "runpod", "aquanode", "gpu", "akash", "voltage-park", "datacrunch"]
 readTime: "6 min read"
