--- a/content/blog/runpod-vs-aquanode-pricing-2025.mdx
+++ b/content/blog/runpod-vs-aquanode-pricing-2025.mdx
@@ -31,6 +31,7 @@ Both platforms use floating prices. Aquanode pulls GPU capacity from Akash, Data
 | H100 | 80 GB | **$1.29/hr** |
 | H200 | 141 GB | **$2.60/hr** |
 | A100 | 80 GB | **$0.90/hr** |
+| MI300X (AMD) | 192 GB | **$1.99/hr** |
 | RTX 4090 | 24 GB | **$0.38/hr** |
 | RTX 3090 | 24 GB | **$0.30/hr** |
 | A6000 | 48 GB | **$0.79/hr** |
