--- a/content/blog/runpod-vs-aquanode-pricing-2025.mdx
+++ b/content/blog/runpod-vs-aquanode-pricing-2025.mdx
@@ -1,7 +1,7 @@
 ---
 id: "runpod-vs-aquanode-pricing-2025"
-title: "Aquanode vs RunPod pricing"
-excerpt: "Who has the lowest GPU price? Let's compare which provider give you best value for money."
+title: "Aquanode vs RunPod pricing: Let's compare which provider give you best value for money."
+# excerpt: "Who has the lowest GPU price? Let's compare which provider give you best value for money."
 coverImage: "/blogs/aquanode-vs-runpod.png"
 author:
   name: "Team Aquanode"
