--- a/content/blog/from-a100-to-h200.mdx
+++ b/content/blog/from-a100-to-h200.mdx
@@ -1,11 +1,11 @@
 ---
 id: "a100-vs-h200-gpu-guide-2025"
 title: "From A100 to H200: How to Choose the Right GPU for Training & Inference in 2025"
-coverImage: "/blogs/aquanode-vs-runpod.png"
+coverImage: "/blogs/blog-covers/from-a100-to-h200.png"
 author:
   name: "Team Aquanode"
-  title: "Sarthak Vaish"
-  avatar: "/blogs/aquanode-team-logo.png"
+  title: "Ansh Saxena"
+  avatar: "/blogs/blog-avatars/aquanode-team-logo.png"
 date: "NOVEMBER 16, 2025"
 tags: ["gpu", "a100", "h100", "h200", "nvidia", "llm", "inference", "training", "aquanode", "compute"]
 readTime: "8 min read"
